# Flex-Save

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  README.md  cloudbuild.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-ci.yml  mobile-ci.yml  web-ci.yml
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  auth.py  billing.py  notifications.py  transactions.py  users.py  vaults.py  webhooks.py  withdrawals.py
backend/app/core/: __init__.py  config.py  firebase.py  security.py
backend/app/models/: __init__.py  deposit.py  user.py  vault.py  withdrawal.py
backend/app/services/: __init__.py  admin_service.py  email_templates.py  notification_service.py  stripe_service.py  user_service.py  vault_service.py  withdrawal_service.py
backend/tests/: test_vault.py
docs/: FIREBASE_SETUP.md
docs/api/: endpoints.md
docs/architecture/: overview.md
mobile/: README.md  analysis_options.yaml  pubspec.yaml
mobile/android/app/: build.gradle.kts  google-services.json
mobile/ios/Runner/: GoogleService-Info.plist  Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/core/: env.dart  (+3 more)
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
web/: .env.example  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
web/src/: middleware.ts
(+55 files in other folders)
